<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="150dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/signUp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:paddingStart="16dp"
                    android:layout_marginTop="50px"
                    android:layout_marginLeft="50px"
                    android:layout_marginRight="50px"
                    android:background="@drawable/gray"
                    android:elevation="10dp"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:paddingStart="16dp"
                    android:layout_marginTop="50px"
                    android:layout_marginLeft="50px"
                    android:layout_marginRight="50px"
                    android:background="@drawable/gray"
                    android:elevation="10dp"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/passwordCheckEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="35dp"
                    android:ems="10"
                    android:hint="@string/passwordCheck"
                    android:paddingStart="16dp"
                    android:layout_marginTop="50px"
                    android:layout_marginLeft="50px"
                    android:layout_marginRight="50px"
                    android:background="@drawable/gray"
                    android:elevation="10dp"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="@color/gray"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:textStyle="bold"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/chatblank"
                    android:layout_margin="5dp"
                    android:textColor="#0BFF8D"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/gotoLoginText"/>
                <Button
                    android:id="@+id/gotoLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gotoLoginButton"
                    android:textStyle="bold"
                    android:background="@drawable/cancle"
                    android:layout_margin="5dp"
                    android:textColor="#88592A"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>